# tabugen

./: .dockerignore  .editorconfig  .gitignore  0-build-exe.bat  Dockerfile  Makefile  README.md  README.rst  requirements.txt  setup.py
bootstrap/cpp/: Logging.h  Portability.h  SparseByteSet.h  StringUtil.cpp  StringUtil.h
bootstrap/cpp/Utility/: Preprocessor.h  Range.h  UncaughtException.h
bootstrap/csharp/: AssetManager.cs
bootstrap/go/: fileutil.go  strutil.go
examples/: README.md
examples/C++/global-var/proj/: AutoGenConfig.h  CMakeLists.txt
examples/C++/global-var/proj/Utility/: ScopeGuard.h
examples/CSharp/: .gitignore  Generate.ps1  Makefile  README.md  build.mk
examples/CSharp/array-map/: AutoConfig.cs  AutoJsonConfig.cs  CSharpDemo2.csproj  Makefile  Program.cs  导出csv.bat  导出json.bat  新手任务.xlsx
examples/CSharp/basic/: AutoConfig.cs  AutoJsonConfig.cs  CSharpDemo1.csproj  Makefile  Program.cs  兵种.xlsx  导出CSharp.bat  导出csv.bat  导出json.bat
examples/CSharp/global-var/: AutoConfig.cs  AutoJsonConfig.cs  CSharpDemo3.csproj  Makefile  导出csv.bat  导出json.bat
examples/CSharp/inner-class/: Makefile  导出csv.bat  导出json.bat  随机宝箱.xlsx
examples/CSharp/src/: BoxDefine.cs  Config.cs  Conv.cs  DataFrame.cs  Example.csproj  GlobalDefine.cs  GuideDefine.cs  Program.cs  SoldierDefine.cs  Utility.cs
examples/Cpp/: .gitignore  CMakeLists.txt  Generate.ps1  Makefile  README.md  StringUtil.h  build.mk  conanfile.txt  vcpkg-configuration.json  vcpkg.json
examples/Cpp/array-map/: AutogenConfig.cpp  AutogenConfig.h  CMakeLists.txt  Makefile  cmake-msvc.bat  export_csv.sh  main.cpp  导出csv.bat  新手任务.xlsx
examples/Cpp/array-map/src/: AutogenConfig.cpp  AutogenConfig.h  main.cpp
examples/Cpp/basic/: AutogenConfig.cpp  AutogenConfig.h  CMakeLists.txt  Makefile  export_csv.sh  main.cpp  兵种.xlsx  导出csv.bat
examples/Cpp/basic/res/: soldier_property_define.csv
examples/Cpp/basic/src/: AutogenConfig.cpp  AutogenConfig.h  main.cpp
examples/Cpp/bootstrap/: helper.cpp  helper.h
examples/Cpp/common/: Conv.h  Utils.cpp  Utils.h
examples/Cpp/common-src/Utility/: Conv.cpp  WinUtil.h
examples/Cpp/global-var/: AutogenConfig.cpp  AutogenConfig.h  CMakeLists.txt  Makefile  README.md  export_csv.sh  main.cpp  全局变量表.xlsx  导出C++.bat  导出csv.bat
examples/Cpp/global-var/proj/: AutoGenConfig.cpp
examples/Cpp/global-var/proj/Utility/: Conv.h  Logging.cpp
examples/Cpp/global-var/res/: global_property_define.csv
examples/Cpp/global-var/src/: AutoGenConfig.cpp  AutoGenConfig.h  AutogenConfig.cpp  AutogenConfig.h  main.cpp
examples/Cpp/inner-class/: AutogenConfig.cpp  AutogenConfig.h  CMakeLists.txt  Makefile  README.md  export_csv.sh  main.cpp  导出csv.bat  随机宝箱.xlsx
examples/Cpp/inner-class/res/: 随机宝箱.xlsx
examples/Cpp/inner-class/src/: AutogenConfig.cpp  AutogenConfig.h  main.cpp
examples/Cpp/src/: BoxDefine.cpp  BoxDefine.h  Config.cpp  Config.h  Conv.cpp  Conv.h  CsvUtil.cpp  GlobalDefine.cpp  GlobalDefine.h  GuideDefine.cpp  GuideDefine.h  Range.h  SoldierDefine.cpp  SoldierDefine.h  StringPiece.cpp  StringPiece.h  StringUtil.cpp  StringUtil.h  dataframe.h  main.cpp  strconv.h
examples/Cpp/src/common/: Conv.h  Utils.cpp  Utils.h
examples/Go/: Generate.ps1  Makefile  README.md  global_define.csv
examples/Go/array-map/: Makefile  README.md  导出Go.bat  导出csv.bat  导出json.bat  新手任务.xlsx
examples/Go/basic/: Makefile  兵种.xlsx  导出csv.bat  导出json.bat
examples/Go/global-var/: Makefile  全局变量表.xlsx  导出csv.bat  导出json.bat
examples/Go/inner-class/: Makefile  导出csv.bat  导出json.bat  随机宝箱.xlsx
examples/Go/res/: box_probability_define.json  global_define.json  newbie_guide_define.json  soldier_property_define.json
examples/Go/sql/: create-table.sql  (+1 more)
examples/Java/: Generate.ps1  Makefile  README.md  build.mk  pom.xml
examples/array-map/: README.md  config.go  newbieguidedefine.csv  导出Go.bat  新手任务.xlsx
examples/basic/: Config.cs  ConfigData.cs  README.md  soldierpropertydefine.csv  兵种.xlsx  导出CSharp.bat
examples/datasheet/: GlobalDefine.xlsx  ItemBox.xlsx  NewbieGuide.xlsx  Soldier.xlsx  全局变量表.xlsx  兵种.xlsx  新手任务.xlsx  随机宝箱.xlsx
examples/global-var/: AutoGenConfig.cpp  AutoGenConfig.h  README.md  globalpropertydefine.csv  全局变量表.xlsx  导出C++.bat
examples/global-var/proj/: AutoGenConfig.cpp  AutoGenConfig.h  CMakeLists.txt  globalpropertydefine.csv  main.cpp
examples/global-var/proj/Utility/: Range.cpp  WinUtil.cpp
examples/inner-class/: README.md  导出Java.bat
examples/sql/: README.md  config.go  create-table.sql  导出Go.bat
tabugen/: __main__.py  cli.py  descriptor.proto  lang.py  predef.py  registry.py  structs.py  typedef.py  version.py
tabugen/datatran/: csv.py  json.py  sql.py
tabugen/parser/: excel.py  helper.py  sheet_parser.py  spreadsheet.py  toolkit.py  xlsxhelp.py
tabugen/util/: fieldutil.py  helper.py  rowutil.py  structutil.py  strutil.py  tableutil.py
tabugen/writer/: csv.py  json.py
tabular/: cli.py  lang.py  registry.py  version.py
tabular/datatran/: csv.py  json.py
tabular/parser/: excel.py  xlsxhelp.py
tabular/util/: fieldutil.py  rowutil.py  structutil.py  strutil.py
taksi/: __init__.py  cli.py  descriptor.proto  lang.py  predef.py  registry.py  strutil.py  typedef.py  types.py  version.py  xlsxhelp.py
taksi/datagen/: csv.py  json.py
taksi/datatran/: csv.py  excel.py  json.py  rowutil.py  sql.py
taksi/descriptor/: descriptor.proto  lang.py  predef.py  types.py
taksi/generator/: genutil.py
taksi/importer/: excel.py  mysql.py  xlsxwrap.py
taksi/parser/: excel.py  mysql.py  xml.py
taksi/util/: fieldutil.py  rowutil.py  structutil.py
taxi/: __init__.py  basegen.py  cli.py  descriptor.proto  descriptor.py  excel_util.py  gen_cpp_v1.py  gen_cs_conf.py  gen_cs_v1.py  gen_go_v1.py  gen_go_v2.py  gen_java_v1.py  importer_excel.py  importer_mysql.py  lang.py  predef.py  registry.py  taxi.py  util.py  version.py
taxi/datagen/: csv.py  json.py
taxi/descriptor/: descriptor.proto  lang.py  predef.py  strutil.py  types.py
taxi/generator/: cppv1.py  genutil.py  gov2.py
taxi/importer/: excel.py  mysql.py  xlsxwrap.py
(+268 files in other folders)
